# mathesis_common

./: .gitignore  README.md  pyproject.toml
mathesis_core/: exceptions.py
mathesis_core/analysis/: __init__.py  dna_analyzer.py
mathesis_core/crawlers/: base.py  school_info_crawler.py
mathesis_core/db/: base.py  chroma.py  hierarchical_chroma.py  korean_tokenizer.py  neo4j_manager.py
mathesis_core/diagnosis/: __init__.py  cognitive_diagnosis.py  models.py  prompts.py
mathesis_core/export/: pdf_generator.py  ppt_agent.py  typst_wrapper.py  visualizers.py
mathesis_core/generation/: __init__.py  problem_generator.py
mathesis_core/grpc/: client.py  common_pb2.py  common_pb2_grpc.py
mathesis_core/llm/: clients.py  decorators.py  parsers.py
mathesis_core/mcp/: server.py
mathesis_core/models/: school.py
mathesis_core/pipeline/: doc_processor.py  loaders.py
mathesis_core/prompts/: __init__.py  analysis_prompts.py  generation_prompts.py  ocr_prompts.py
mathesis_core/vision/: __init__.py  ocr_engine.py
protos/: common.proto
tests/: __init__.py
tests/crawlers/: __init__.py  test_base.py  test_school_info_crawler.py
tests/db/: __init__.py  test_chroma.py  test_korean_tokenizer.py  test_neo4j_manager.py
tests/export/: test_pdf_generator.py  test_ppt_agent.py  test_typst_wrapper.py  test_visualizers.py
tests/grpc/: test_client.py
tests/integration/: test_grpc_connectivity.py  test_mcp_integration.py
tests/llm/: test_clients.py  test_decorators.py  test_ollama_client.py  test_parsers.py
tests/mcp/: test_server.py
tests/models/: test_school.py
(+10 files in other folders)
